cmake_minimum_required(VERSION 4.0)
project(cppLeetCode)

set(CMAKE_CXX_STANDARD 17)

add_executable(cppLeetCode main.cpp)
add_executable(solution_88 src/solution_88.cpp)
add_executable(solution_27 src/solution_27.cpp)
add_executable(solution_228 src/solution_228.cpp)
add_executable(solution150 src/solution150.cpp)
add_executable(solution209 src/solution_209.cpp)
add_executable(solution_36 src/solution_36.cpp)
add_executable(solution_383 src/solution_383.cpp)
add_executable(solution_20 src/solution_20.cpp)
